--- a/src/Components/MainContent/style.scss
+++ b/src/Components/MainContent/style.scss
@@ -108,8 +108,8 @@
         font-weight: normal;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
         line-height: 19px;
-        color: var(--text-secondary);
-        font-size: 11px;
+        color: var(--text-primary);
+        font-size: 12px;
       }
     }
 
