--- a/src/Components/MotorControl/style.scss
+++ b/src/Components/MotorControl/style.scss
@@ -7,7 +7,8 @@
       p {
         font-weight: normal;
         padding-bottom: 10px;
-        color: var(--text-secondary);
+        color: var(--text-primary);
+        line-height: 1.6;
       }
     }
 
@@ -79,9 +80,10 @@
     background: transparent;
 
     .rc-slider-handle {
-      background: var(--text-tertiary);
-      border-color: var(--text-tertiary);
+      background: var(--text-secondary);
+      border-color: var(--text-secondary);
       box-shadow: none;
+      opacity: 0.5;
     }
   }
 
@@ -92,7 +94,8 @@
   .checkbox {
     span {
       margin-left: 5px;
-      color: var(--text-secondary);
+      color: var(--text-primary);
+      font-weight: 500;
     }
   }
 
