--- a/src/variables.scss
+++ b/src/variables.scss
@@ -14,9 +14,9 @@
   --accent-green: #39ff14;
   
   /* Text Colors */
-  --text-primary: #e0e0ff;
-  --text-secondary: #a0a0d0;
-  --text-tertiary: #707090;
+  --text-primary: #f0f0ff;
+  --text-secondary: #c8d0ff;
+  --text-tertiary: #9aa5d0;
   
   /* Legacy Support */
   --color-primary: #0099ff;
